@@ -83,7 +83,10 @@
   (and (memq feature *features*) #t))
 
 (begin-deprecated
- (define feature? provided?))
+ (define (feature? sym)
+   (issue-deprecation-warning
+    "`feature?' is deprecated.  Use `provided?' instead.")
+   (provided? sym)))
 
 ;;; let format alias simple-format until the more complete version is loaded
 (define format simple-format)
