@@ -1,3 +1,7 @@
+2002-09-15  Marius Vollmer  <mvo@zagadka.ping.de>
+
+	* boot-9.scm (feature?): Added deprecation message.
+
 2002-09-14  Rob Browning  <rlb@defaultvalue.org>
 
 	* boot-9.scm (sqrt): minor indentation fix.
